Fix dark mode offcanva menu

--- a/scss/mdml-scss/_offcanvas-lg.scss
+++ b/scss/mdml-scss/_offcanvas-lg.scss
@@ -6,9 +6,9 @@
         display: flex;
         flex-direction: column;
         max-width: 100%;
-        color: $offcanvas-color;
+        color: $dark;
         visibility: hidden;
-        background-color: $offcanvas-bg-color;
+        background-color: $light;
         background-clip: padding-box;
         outline: 0;
         @include box-shadow($offcanvas-box-shadow);
